fix: corrige método searchAssociados e session.savePath
- Altera searchAssociados para usar \ em vez de \
- Corrige session.savePath para string vazia (usa padrão do CI4)
- Resolve erro 'Call to undefined method paginate()'

--- a/app/.env.example
+++ b/app/.env.example
@@ -63,7 +63,7 @@ encryption.key = hex2bin:your-encryption-key-here-32-chars-min
 session.driver = 'CodeIgniter\Session\Handlers\FileHandler'
 session.cookieName = 'associados_session'
 session.expiration = 7200
-session.savePath = WRITEPATH . 'session'
+session.savePath = ''
 session.matchIP = false
 session.timeToUpdate = 300
 session.regenerateDestroy = true
