--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,16 @@
-<IfModule authz_core_module>
-	Require all denied
+# Disable directory browsing
+Options -Indexes
+
+<IfModule mod_rewrite.c>
+    RewriteEngine On
+    
+    # Redirect all requests to app/public folder
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteCond %{REQUEST_FILENAME} !-d
+    RewriteRule ^(.*)$ app/public/$1 [L]
 </IfModule>
-<IfModule !authz_core_module>
-	Deny from all
-</IfModule>
+
+# Prevent access to sensitive files
+<FilesMatch "^\.">
+    Require all denied
+</FilesMatch>
