--- a/app/.htaccess
+++ b/app/.htaccess
@@ -12,9 +12,5 @@ Options -Indexes
 
 # Prevent access to sensitive files
 <FilesMatch "^\.">
-    Order allow,deny
-    Deny from all
+    Require all denied
 </FilesMatch>
-
-# Protect application and system folders
-RedirectMatch 403 ^/(app|system|vendor|writable|tests)/
